--- a/src/styles/_restaurants.scss
+++ b/src/styles/_restaurants.scss
@@ -7,6 +7,7 @@
   padding-bottom: 100px;
 
   @media (max-width: $break-small) {
+    padding-top: 60px;
     max-width: 100%;
     flex-direction: column;
     flex-wrap: nowrap;
